--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
     <!-- Header -->
     <header>
         <section>
+            <ul class="contacts">
+                <li class="link-contact">
+                    <a href="mailto:olegsalimon@gmail.com">serviseos@gmail.com</a>
+                </li>
+                <li class="link-contact">
+                    <a href="tel:+380930000000">093 000 00 00</a>
+                </li>
+            </ul>
+        
             <nav class="nav-panel">
                 <ul>
                     <li class="link">
-                        <a href="">Главная</a>
+                        <a href="./index.html">Главная</a>
                     </li>
                     <li class="link">
                         <a href="">Услуги</a>
@@ -28,29 +37,20 @@
                         <a href="">Контакты</a>
                     </li>
                 </ul>
-            </nav>
-
-            <ul class="contacts">
-                <li class="link-contact">
-                    <a href="mailto:olegsalimon@gmail.com">serviseos@gmail.com</a>
-                </li>
-                <li class="link-contact">
-                    <a href="tel:+380930000000">093 000 00 00</a>
-                </li>
-            </ul>
+            </nav>           
         </section>
     </header>
 
     <!-- Main -->
     <main>
         <!-- Hero -->
-        <img src="./images/washing-repair.jpg" alt="washing-repair" width="1000">
-        <h1>Ремонт бытовой техники г.Коростень +50км</h1>
+        <img src="./images/washing-repair.jpg" alt="washing-repair" width="1500">
+        <h1 class="hero-title">Ремонт бытовой техники <br/>г.Коростень +50км</h1>
         <button class="hero-button" type="button">Вызвать мастера</button>
 
         <!-- What we do -->
         <h2 class="hh-title">Что мы предлагаем</h2>
-        <img src="./images/tecnix.jpg" alt="Appliances" width="370">
+        <img class="appliances" src="./images/tecnix.jpg" alt="Appliances" width="370">
         <ul>
             <li>
                 <h3 class="title">Стиральные машины</h3>
@@ -73,23 +73,23 @@
     </main>
 
     <!-- Footer -->
-    <footer>
-        <ul class="footer-contacts">
+    <footer>              
+        <ul>
+            <li><img src="./images/Samsung-Logo.jpg" alt="samsung-logo" width="80"></li>
+            <li><img src="./images/philips-logo.jpg" alt="philips-logo" width="80"></li>
+            <li><img src="./images/Braun-logo.jpg" alt="Braun-logo" width="80"></li>
+            <li><img src="./images/bosch-logo.jpg" alt="bosch-logo" width="80"></li>
+            <li><img src="./images/LG-Logo.png" alt="lg-logo" width="80"></li>
+            <li><img src="./images/Gorenje-LOGO.jpg" alt="Gorenje-LOGO" width="80"></li>
+        </ul>
+
+        <ul class="contacts">
             <li class="link-contact">
                 <a href="mailto:">serviseos@gmail.com</a>
             </li>
             <li class="link-contact">
                 <a href="tel:+380930000000">093 000 00 00</a>
             </li>
-        </ul>
-        
-        <ul>
-            <li><img src="./images/Samsung-Logo.jpg" alt="samsung-logo" width="80"></li>
-            <li><img src="./images/philips-logo.jpg" alt="philips-logo" width="80"></li>
-            <li><img src="./images/Braun-logo.jpg" alt="Braun-logo" width="80"></li>
-            <li><img src="./images/bosch-logo.jpg" alt="bosch-logo" width="80"></li>
-            <li><img src="./images/lg-logo.jpg" alt="lg-logo" width="80"></li>
-            <li><img src="./images/Gorenje-LOGO.jpg" alt="Gorenje-LOGO" width="80"></li>
         </ul>
     </footer>
 
