--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
     <!-- Main -->
     <main>
         <!-- Hero -->
-        <img src="./images/washing-repair.jpg" alt="washing-repair" width="1500">
-        <h1 class="hero-title">Ремонт бытовой техники <br/>г.Коростень +50км</h1>
-        <button class="hero-button" type="button">Вызвать мастера</button>
+       <div class="hero">
+            <img src="./images/washing-repair.jpg" alt="washing-repair" width="1500">
+            <h1 class="hero-title">Ремонт бытовой техники <br />г.Коростень +50км</h1>
+            <button class="hero-button" type="button">Вызвать мастера</button>
+       </div>
 
         <!-- What we do -->
         <h2 class="hh-title">Что мы предлагаем</h2>
